--- a/resources/sass/elements/_chat-box.scss
+++ b/resources/sass/elements/_chat-box.scss
@@ -251,3 +251,11 @@
         margin-top: 50px;
     }
 }
+
+.messages {
+    overflow-y: scroll;
+}
+
+.messenger-messagingView .m-body {
+    overflow: hidden;
+}
